--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*FONT*/
 @font-face {
   font-family: "redHatDisplay";
-  src: url("../font/RedHatDisplay-VariableFont_wght.ttf") format("truetype");
+  src: url("font/RedHatDisplay-VariableFont_wght.ttf") format("truetype");
   font-style: normal;
   font-weight: 300 900;
 }
